@@ -3,10 +3,7 @@ plugin-description: Multiworld management made easy.
 plugin-enabled: {0} has been enabled.
 plugin-disabled: {0} disabled.
 
-createcommand-name: create
-createcommand-description: Create a new world.
-createcommand-permission-description: Allow users to create new worlds.
-createcommand-usage: <name> [e:environment] [s:seed] [g:plugin:id]
+
 
 world-creation-in-progress: &YELLOWCreating {0} (this may take a while)
 world-created: &GREENThe world &YELLOW{0} &GREEN has been created.
@@ -17,6 +14,25 @@ valid-environments: Valid types are: {0}.
 
 
 # Creation commands
+## Create command
+
+### Create command conversation
+createcommand.name: create
+createcommand.description: Create a new world.
+createcommand.permission-description: Allow users to create new worlds.
+createcommand.usage: 
+createcommand.prefix: &LIGHT_PURPLEStep {0} of 7: 
+createcommand.prompt-world-name: &YELLOWWhat do you want to name your new world?
+createcommand.world-already-exists: A world already exists with that name. Choose another.
+createcommand.prompt-world-environment: &YELLOWChoose an environment type: &GREEN{0}
+createcommand.prompt-world-type: &YELLOWChoose a world type: &GREEN{0}
+createcommand.prompt-world-seed: &YELLOWPick a seed or type {0}: 
+createcommand.prompt-world-generator: &YELLOWName of custom world generator plugin or type {0}:
+createcommand.prompt-world-generator-id: &YELLOWName of custom world generator id or type {0}:
+createcommand.world-created: &YELLOW{0} &GREENhas been created.
+createcommand.random: random
+createcommand.none: none
+
 ## Load command
 loadcommand.name: load
 loadcommand.description: Load a world mananged by DimensionDoor
@@ -36,11 +52,16 @@ removecommand.usage: <name>
 removecommand.world-removed: &YELLOW{0} &GREENhas been removed.
 removecommand.world-is-not-managed: {0} is not managed by DimensionDoor.
 removecommand.remove-data-also: &YELLOWYou will still need to remove the world directory.
+removecommand.must-specify-a-world-name: You must specify a world name!
+removecommand.list-worlds-hint: You may only remove worlds configured by DimensionDoor.
 
 unloadcommand-name: unload
 unloadcommand-description: Unload a world from memory..
 unloadcommand-permission-description: Allow users to unload worlds.
 unloadcommand-usage: <name>
+unloadcommand.world-is-not-managed: {0} is not managed by DimensionDoor.
+unloadcommand.list-worlds-hint: You may only unload worlds configured by DimensionDoor.
+unloadcommand.world-unloaded: {0} has been unloaded.
 
 world-unloaded: &YELLOW{0} &GREENhas been unloaded.
 
